# breweries-etl

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
airflow/dags/: brewery_pipeline.py
airflow/dags/brewery_etl/test/transformations/: conftest.py  test_bronze_to_silver.py  test_extract_brewery_data.py  test_landing_to_bronze.py  test_silver_to_gold.py
airflow/dags/brewery_etl/transformations/: bronze_to_silver.py  extract_brewery_data.py  landing_to_bronze.py  silver_to_gold.py
airflow/dags/brewery_etl/transformations/utils/: constants.py  helpers.py  metrics.py
monitoring/grafana/provisioning/dashboards/: airflow_dashboard.json  dashboard.yml
monitoring/prometheus/: prometheus.yml
