[tool.poetry]
name = "breweries-etl"
version = "0.1.0"
description = ""
authors = ["Rafaela Milagres Moreira <moreiramrafaela@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
requests = "^2.32.3"
python-dotenv = "^1.1.0"
pandas = "^2.3.0"
deltalake = "^1.0.2"
prometheus-client = "^0.22.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
